Add /ping route for deployment debugging

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/ping",
+      "dest": "server.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "server.js"
     }
