--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "name": "pulsewrite-backend",
   "builds": [
     {
       "src": "server.js",
@@ -8,12 +9,8 @@
   ],
   "routes": [
     {
-      "src": "/ping",
+      "src": "/(.*)",
       "dest": "server.js"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api?path=$1"
     }
   ]
 }
